Enhance view files with documentation comments
- Added XML documentation comments to _ViewImports.cshtml and _ViewStart.cshtml
  to clarify their purpose and usage in the Northwind.Mvc application.
- Included descriptive comments in Index.cshtml and Privacy.cshtml to explain
  the content and functionality of the main home and privacy policy pages.
- This update improves code readability and assists future developers in
  understanding the structure and intent of the views.

--- a/code/MatureWeb/Northwind.Mvc/Views/Home/Index.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
+@* 
+    Main home page of the Northwind MVC application
+    This is the default landing page that users see when accessing the root URL
+*@
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
