--- a/code/MatureWeb/Northwind.Mvc/Views/Home/Privacy.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/Home/Privacy.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+
+@* 
+    Privacy Policy page for the Northwind MVC application
+    This page should contain information about how user data is handled
+    and other privacy-related information required by regulations like GDPR
+*@
+
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
