--- a/code/MatureWeb/Northwind.Mvc/Views/_ViewStart.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
-﻿@{
+﻿@*
+    _ViewStart.cshtml is executed at the beginning of every view's rendering
+    It allows setting common view aspects without repeating code in each view
+    The Layout property defines the shared layout template for all views
+    Changes here affect all views in this directory and subdirectories
+*@
+
+@{
     Layout = "_Layout";
 }
