--- a/code/MatureWeb/Northwind.Mvc/Views/Home/Index.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
+﻿@model HomeIndexViewModel
+
+@{
     ViewData["Title"] = "Home Page";
+    string currentItem = "";
 }
 
 @* 
@@ -11,3 +14,4 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
