--- a/code/MatureWeb/Northwind.Mvc/Views/_ViewImports.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/_ViewImports.cshtml
@@ -7,4 +7,7 @@
 
 @using Northwind.Mvc
 @using Northwind.Mvc.Models
+@using Northwind.EntityModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
