--- a/code/MatureWeb/Northwind.Mvc/Views/Home/Suppliers.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/Home/Suppliers.cshtml
@@ -2,6 +2,11 @@
 
 <div class="row">
     <h1 class="display-2">Suppliers</h1>
+
+    <div class="mb-3">
+        <a asp-action="AddSupplier" class="btn btn-primary">Add Supplier</a>
+    </div>
+
     <table class="table">
         <thead class="thead-inverse">
             <tr>
@@ -21,8 +26,8 @@
                         <td>@s.Country</td>
                         <td>@s.Phone</td>
                         <td>
-                            <a href="edit/@s.SupplierId">Edit</a>
-                            <a href="delete/@s.SupplierId">Delete</a>
+                            <a asp-action="EditSupplier" asp-route-id="@s.SupplierId">Edit</a>
+                            <a asp-action="DeleteSupplier" asp-route-id="@s.SupplierId">Delete</a>
                         </td>
                     </tr>
                 }
