--- a/code/MatureWeb/Northwind.Mvc/Views/Home/Privacy.cshtml
+++ b/code/MatureWeb/Northwind.Mvc/Views/Home/Privacy.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@inject IWebHostEnvironment webHost
+
+@{
     ViewData["Title"] = "Privacy Policy";
 }
 
@@ -22,6 +24,28 @@
 *@
 
 <h1>@ViewData["Title"]</h1>
+
+<environment names="Development,Staging">
+<div class="alert alert-warning">
+    <h2>Attention developers and testers</h2>
+    <p>
+        This is a warning that only developers and testers will see.
+        Current environment: 
+        <span class="badge bg-warning">@webHost.EnvironmentName</span>
+    </p>
+</div>
+</environment>
+
+<environment names="Production">
+<div class="alert alert-info">
+    <h2>Welcome, visitor</h2>
+    <p>
+        This is information that only visitor to the Production website
+        will see. Current environment:
+        <span class="badge bg-info">@webHost.EnvironmentName</span>
+    </p>
+</div>
+</environment>
 
 <p>Use this page to detail your site's privacy policy.</p>
 
